tests/test_files/type_checker/bad_callee.stderr
error: unknown identifier `bar`
- bad_callee.lark:2:4
2 |     bar(msg)
  |     ^^^
